@@ -5,9 +5,9 @@ importFrom("stats", "end")
 importFrom("stats", "frequency")
 importFrom("stats", "window")
 
-export(arfima, Arima, arima.errors, auto.arima, BoxCox, croston, 
+export(arfima, Arima, arima.errors, auto.arima, BoxCox, croston,
 fitted.Arima, forecast, forecast.ar, forecast.Arima, forecast.ets, forecast.fracdiff,
-forecast.HoltWinters, forecast.lm, forecast.stl, forecast.StructTS, forecast.bats, forecast.tbats, accuracy, holt, hw, InvBoxCox,
+forecast.HoltWinters, forecast.lm, forecast.stl, forecast.StructTS, forecast.bats, forecast.tbats, accuracy, holt, hw, InvBoxCox, nnetar, forecast.nnetar,
 meanf, logLik.ets, monthdays, na.interp, ets, plot.bats, plot.tbats, plot.ets, plot.forecast,
 plot.splineforecast, rwf, seasadj, seasonaldummy,naive,snaive,stlf,
 seasonaldummyf, seasonplot, ses, sindexf, splinef,tslm,fourier,fourierf,forecast.lm,
@@ -25,6 +25,7 @@ S3method(forecast,ets)
 S3method(forecast,fracdiff)
 S3method(forecast,HoltWinters)
 S3method(forecast,lm)
+S3method(forecast,nnetar)
 S3method(forecast,stl)
 S3method(forecast,StructTS)
 S3method(forecast,ts)
