@@ -29,8 +29,7 @@ by the restricted parameter space.}
 The function \code{summary} is used to obtain and print a summary of the
 results, while the function \code{plot} produces a plot of the forecasts and prediction intervals.
 
-The generic accessor functions \code{fitted.values} and \code{residuals} extract useful features of
-the value returned by \code{meanf}.
+The generic accessor functions \code{fitted.values} and \code{residuals} extract useful features of the value returned by \code{splinef}.
 
 An object of class \code{"forecast"} is a list containing at least the following elements:
 \item{model}{A list containing information about the fitted model}
